tunne kya samjha hua h

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL = mongodb://localhost:27017/hostel-management-system
+MONGO_URL = mongodb+srv://lavishatrey:BzE7IMZERUIMHVtw@cluster0.zaeawcd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
