--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,11 +1,17 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Environment variables
 .env
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# macOS files
+.DS_Store
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
